# chest-xray-detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
chest_xray_detection/ml_detection_api/application/: api.py  load_models.py
chest_xray_detection/ml_detection_api/application/streamlit/: chest_detection_app.py
chest_xray_detection/ml_detection_api/application/test/: test_api.py
chest_xray_detection/ml_detection_api/configs/: configs.py  inference_config.yaml  settings.py
chest_xray_detection/ml_detection_api/domain/inference/: inference_pipeline.py
chest_xray_detection/ml_detection_api/domain/wrappers/: base_wrapper.py  multiclass_detection_wrapper.py
chest_xray_detection/ml_detection_api/infrastructure/: load.py
chest_xray_detection/ml_detection_api/utils/: formatting.py  geometry.py
chest_xray_detection/ml_detection_develop/: README.md
chest_xray_detection/ml_detection_develop/configs/: label_mapping.yaml  settings.py
chest_xray_detection/ml_detection_develop/dataset/: dataloader.py  detection_dataset.py
chest_xray_detection/ml_detection_develop/losses/: __init__.py
chest_xray_detection/ml_detection_develop/metrics/: utils.py
chest_xray_detection/ml_detection_develop/models/: faster_rcnn.py
chest_xray_detection/ml_detection_develop/optimizer/: __init__.py
chest_xray_detection/ml_detection_develop/train/: stratified_split_training.py  training.py
chest_xray_detection/ml_detection_develop/utils/: files.py  visualization.py
scripts/: run_fastapi.sh  run_streamlit.sh
(+41 files in other folders)
